# abaqustools

./: .gitignore  README.md  __init__.py  abq.py  gen.py  kw.py  numtools.py  post.py  pyproject.toml  requirements.txt
TestModel/: ABQvwrG.00.dmp  ExportModal.py  TestLangenuen.com  TestLangenuen.inp  TestLangenuen.msg  TestLangenuen.prt  TestLangenuen.sim  TestLangenuen.sta  TestSulafjorden.com  TestSulafjorden.inp  TestSulafjorden.msg  TestSulafjorden.odb  TestSulafjorden.odb_f  TestSulafjorden.prt  TestSulafjorden.sim  TestSulafjorden.sta  abaqus.rpy  abaqus.rpy.10  abaqus.rpy.11  abaqus.rpy.13  abaqus.rpy.14  abaqus.rpy.15  abaqus.rpy.3  abaqus.rpy.4  abaqus.rpy.5  abaqus.rpy.6  abaqus.rpy.8  abaqus.rpy.9
example_suspensionbridge/: ExampleGenerateSuspensionBridge.py  LangenuenGenerate.py  LangenuenParameters.py  SulafjordenGenerate.py  SulafjordenParameters.py  UserParametersManual.xlsx  abaqus.rpy.20  abaqus.rpy.21  abaqus.rpy.22  abaqus.rpy.23  abaqus.rpy.24  abaqus.rpy.25  abaqus.rpy.26
examples/: ExampleGenerateSuspensionBridge.py  UserParametersManual.xlsx
fem_corot/: Assembly.py  Corot.py  NonLinearSolver.py  ProcessModel.py  TestCable.py  TestCantilever.py  Test_profile.py  __init__.py
odbexport/: ExampleExportModal.py  __init__.py  abaqus.rpy  export.py  exportmodal.py  exportstatic.py  info.txt  odbexport.py  odbfunc.py  writepy_old
odbexport_example/: Export.py  Model_single_deck_exportmodal.py  Model_single_deck_exportstatic.h5  Model_single_deck_exportstatic.py
old/: EstimateCableDeflectionSimple.py  OLD_AbaqusExportModal.py  TestParameters.py  (+4 more)
(+130 files in other folders)
