[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude=["TestScript_example_exclude.py"]

[project]
name = "abaqustools"
version = "2.0" # Follow PEP440
authors = [{ name="O. W. Petersen", email="oyvind.w.petersen@ntnu.no" },]
description = "Tools for FEM software ABAQUS. Parametric model generation of suspension bridges. Export from ODB files."
requires-python = ">=3"
keywords = ["abaqus", "suspension","bridge","fem","odb"]
dependencies = ["numpy","os","sys","time","scipy","nexusformat","datetime","h5py","timeit","warnings","putools"]